# osm-data-validation

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  check_changeset_timestamps.cpp
